# llm-tree-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: classify.py  classify_text.py  tree_config.yaml
llm_tree_classifier/: __init__.py  __main__.py  classifier.py  exceptions.py  tree.py
llm_tree_classifier/llm/: __init__.py  base.py  llama_cpp.py
tests/: conftest.py  test_classifier.py  test_llm.py
